# ai-workshop-hasuracon23

./: README.md  docker-compose.yaml
handlers/: event.py  query_llm.py  requirements.txt
scripts/: 0_motivation.ipynb  1_postgres_setup.ipynb  3_resume_query.ipynb
tutorials/HRTool/handlers/: Dockerfile  pyproject.toml  server.py
tutorials/HRTool/handlers/app/: event.py
tutorials/HRTool/scripts/: 1_postgres_setup.ipynb
tutorials/chat_with_doc/: chat_with_doc_weaviate.ipynb  resume.txt
tutorials/handlers/: Dockerfile  event.py
tutorials/scripts/: 2_vectordb_setup.ipynb
